# kloak

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: RESEARCH.md
docs/plans/: 2026-03-09-phase1-design.md  2026-03-09-phase1-implementation.md  2026-03-10-langchain-design.md  2026-03-10-phase1.1-design.md  2026-03-10-phase1.1-implementation.md
examples/: gitleaks.py  langchain.py  langchain_integration.py  malaysian.py  my.py
kloak/: __init__.py  config.py  engine.py  nlp_backend.py  null_nlp.py  types.py
kloak/extras/gitleaks/: __init__.py  cache.py  loader.py
kloak/extras/malaysian/: __init__.py  mykad.py  recognizers.py  test_fixtures.json
kloak/integrations/: langchain.py
tests/: test_api.py  test_core.py  test_core_regex_only.py  test_deanonymize.py  test_include_exclude.py  test_nlp_backend.py  test_null_nlp.py  test_tokenize.py  test_tokenize_persistence.py  test_types.py
tests/extras/gitleaks/: test_gitleaks.py
tests/extras/langchain/: test_langchain.py
tests/extras/malaysian/: test_malaysian.py  test_mykad_validation.py
