[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kloak"
version = "0.2.0"
description = "Kloak your data before it touches AI. Local-first PII & secrets redaction."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Klovr", email = "hello@klovr.co" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
]

[project.optional-dependencies]
nlp = ["spacy>=3.7"]
malaysian = []  # marker extra (recognizers ship in core package)
gitleaks = ["httpx>=0.27"]
langchain = ["langchain-core>=0.2"]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/klovr/kloak"
Repository = "https://github.com/klovr/kloak"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
